an html and css design

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
             <div class="content">
                 <div class="big-box">
                     <div class="photo">
+                        <img src="images/Capture d’écran (54).png" alt="">
+                    </div>
+                    <div class="small-box">
+                        <h3>First template with elzero</h3>
+                        <div class="info">
+                            <span>2024</span>
+                            <span>Html & css</span>
+                        </div>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <div class="big-box">
+                    <div class="photo">
                         <img src="images/Capture d’écran (50).png" alt="">
                     </div>
                     <div class="small-box">
